style: Adjust header margin to ensure border visibility on the page

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ html {
 }
 
 header {
-    margin: var(--MARGIN) auto;
+    margin: calc(var(--MARGIN) + 20px) auto;
     padding: 2em;
     width: 70vw;
     background-color: var(--BGCOLOR);
